VB-4091 Fix map container clipping when in fullscreen mode

--- a/web/css/vb-popbio-maps.css
+++ b/web/css/vb-popbio-maps.css
@@ -23,8 +23,6 @@ BODY {
 #map_container {
     position: relative;
     height: 598px;
-    margin-left: -10px;
-    margin-right: -10px;
 
 }
 
@@ -39,6 +37,11 @@ BODY {
 #content-inner {
     margin-top: -26px;
     margin-bottom: -26px;
+}
+
+.gutter {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 /*Overwrite bootstrap's label font size*/
